# just-say-v2

./: .gitignore  AGENTS.md  CONTEXT.md  PRODUCT.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/: copilot-instructions.md
docs/: codex-implementation-prompt.md  plan.md  rebuild-v2-blueprint.md  rebuild-v2-technical-design.md
docs/adr/: 0001-runtime-specific-asr-sidecars.md
mockups/: index.html
mockups/history/: focused-archive.html
mockups/live-session/: focused-flow.html  styles.css
mockups/quick-dictation/: ptt-hud.html  shape-directions.html
mockups/settings/: focused-controls.html
mockups/sidebar/: focused-rail.html
native/windows-hotkey-helper/: go.mod  main.go
resources/local-service/: README.md  pyproject.toml  service.py  test_service.py
resources/local-service-qwen/: README.md  pyproject.toml  service.py
scripts/: build.mjs  qwen_local_smoketest.py  run-electron-debug.mjs
src/core/contracts/: engine.ts  storage.ts
src/core/session/: session-machine.test.ts  session-machine.ts  session-types.ts
src/core/settings/: profile-catalog.ts  settings-resolver.test.ts  settings-resolver.ts  settings-schema.test.ts  settings-schema.ts
src/core/transcript/: transcript-reducer.test.ts  (+4 more)
src/main/: app-paths.test.ts  app-paths.ts  index.ts
src/preload/: api.test.ts  api.ts  capture.test.ts  capture.ts  entry.ts  index.test.ts  index.ts
src/renderer/: base.css  index.html  main.tsx
src/shared/: api-types.ts  local-service-types.ts  primitive-types.ts  runtime-snapshot.ts  window-api.ts
(+119 files in other folders)
